--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* Global properties ======================================================== */
 body { 
 	background:#281f1d;
-	/*background-image:url(../images/bg.jpg) ;*/ 
+	background-image:url(../images/bg1.png) ;
 	background-position: center; 
 	text-align:left;
 }
@@ -30,12 +30,12 @@ body {
 	left:80px;
 	top:150px;
 	overflow:hidden;
-	text-shadow: 2px 3px 3px #666; 
+	text-shadow: 2px 3px 3px #222; 
 	font-family:Microsoft YaHei;
 	font-style:italic;
 	font-weight:500;
 	font-size:20px;
-	color:#33a3dc;
+	color:#CCCCCC;
 }
 
 #container{
@@ -54,23 +54,20 @@ body {
 	top:0px;
 	padding:10px;
 	overflow:hidden;
-	text-shadow: 2px 3px 3px #888; 
-	color:#33a3dc;
-	filter:alpha(opacity=70);
-	-moz-opacity:0.7;
-	opacity:0.7;
+	text-shadow: 2px 3px 3px #222; 
+	color:#CCCCCC;
 }
 
 #footer {
 	position:absolute;
 	left:32%;
-	top:95%;
+	top:91%;
 	overflow:hidden;
-	text-shadow: 2px 3px 3px #555; 
+	text-shadow: 2px 3px 3px #222; 
 	font-family:Microsoft YaHei;
 	font-style:italic;
 	font-size:20px;
-	color:#33a3dc;
+	color:#CCCCCC;
 }
 
 
@@ -83,8 +80,8 @@ body {
 }
 
 #show{
-	color:#33a3dc;
-	text-shadow: 2px 3px 3px #555; 
+	color:#CCCCCC;
+	text-shadow: 2px 3px 3px #222; 
 	font-family:Microsoft YaHei;
 	font-style:italic;
 	font-size:20px;
@@ -126,12 +123,12 @@ img {
 }
 
 .spanstyle{
-	color:#33a3dc;
+	color:#bed742;
 	font-family:courier;
-	font-size:22px;
-	text-shadow: 2px 3px 3px #555; 
+	text-shadow: 2px 2px 1px #222; 
 	font-style:italic;
 	font-weight:600;
+	font-size:20px;
 	position:absolute;		/* 绝对定位 */
 	top:-50px;
 	overflow:hidden;
