1,比较靠后的一次更新,将图片格式换为jpg 2,主体流程确定 3,等同学测试之后,就等1000天了. 4,Mike at 4-23

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 /* Global properties ======================================================== */
 body { 
 	background:#666666;
-	background-image:url(../images/bg1.png) ;
-	background-position: center; 
+	background-image:url(../images/bg1.jpg) ;
 	text-align:left;
 }
 
